objects/TestBigObject__b.object
<CustomObject>
    <fields>
        <fullName>BigObjectField__c</fullName>
        <label>BigObjectField</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BigObjectNo__c</fullName>
        <label>BigObjectNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomeIndexTest__c</fullName>
        <label>CustomeIndexTest</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <indexes>
        <fullName>BigObjectIndex</fullName>
        <fields>
            <name>BigObjectField__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <label>BigObjectIndex</label>
    </indexes>
    <label>TestBigObject</label>
    <pluralLabel>TestBigObjects</pluralLabel>
</CustomObject>